<resources>
    <string name="app_name">Excel Sheet Writer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_column_name">Enter Column Name</string>
    <string name="submit">Submit</string>
    <string name="enter_value_of_first_cell">Enter value for First Cell</string>
    <string name="submit_name">Add Column</string>
    <string name="submit_row_value">Add Row</string>
</resources>